submissions/154.error
  File "tmp.py", line 54
    def getMove(1,2)
                ^
SyntaxError: invalid syntax
